--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.4.2",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.2",
     "@nestjs/platform-express": "^8.4.2",
+    "joi": "^17.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
