--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:staged": "lint-staged",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.2",
@@ -36,6 +38,7 @@
     "typeorm-naming-strategies": "^4.0.0"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^16.2.1",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -49,7 +52,9 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.0",
     "jest": "^27.2.5",
+    "lint-staged": "^12.3.7",
     "prettier": "^2.6.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
@@ -75,6 +80,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --fix"
   },
   "packageManager": "yarn@3.2.0"
 }
