--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "gen:proto": "./tools/proto_gen.sh"
+  },
+  "resolutions": {
+    "@grpc/grpc-js": "^1.5.10"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.5.10",
+    "@grpc/proto-loader": "^0.6.9",
     "@nestjs/common": "^8.4.2",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.2",
+    "@nestjs/microservices": "^8.4.3",
     "@nestjs/platform-express": "^8.4.2",
     "@nestjs/typeorm": "^8.0.3",
     "cross-env": "^7.0.3",
@@ -51,6 +58,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -63,6 +71,7 @@
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "ts-proto": "^1.110.2",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
