--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,10 @@
 FROM node:16
 
 WORKDIR /app
-COPY . .
-EXPOSE 3000
 
-CMD ["yarn", "start:dev"]
+COPY . .
+
+RUN yarn install
+RUN yarn build
+
+CMD ["node", "dist/main.js"]
