--- a/.github/workflows/delpoy.yml
+++ b/.github/workflows/delpoy.yml
@@ -76,6 +76,7 @@ jobs:
           docker run -d -p ${{ env.SERVER_PORT }}:${{ env.SERVER_PORT }} \
           --name ${{ env.DOCKER_NAME }} \
           --restart always -e APP_PORT=${{ env.SERVER_PORT }} \
+          -e NODE_ENV=production \
           -e POSTGRES_HOST=${{ secrets.DATABASE_HOST }} \
           -e POSTGRES_PORT=${{ secrets.DATABASE_PORT }} \
           -e POSTGRES_DB=${{ secrets.DATABASE_DB }} \
