ci(actions): network 옵션 추가

--- a/.github/workflows/delpoy.yml
+++ b/.github/workflows/delpoy.yml
@@ -74,6 +74,7 @@ jobs:
         run: |
           /home/soup/commands/remove_docker_container.sh ${{ env.DOCKER_NAME }} ${{ env.DOCKER_IMAGE }}:latest
           docker run -d -p ${{ env.SERVER_PORT }}:${{ env.SERVER_PORT }} \
+          --net soup \
           --name ${{ env.DOCKER_NAME }} \
           --restart always -e APP_PORT=${{ env.SERVER_PORT }} \
           -e NODE_ENV=production \
