--- a/package.json
+++ b/package.json
@@ -34,14 +34,17 @@
     "@nestjs/core": "^8.4.2",
     "@nestjs/microservices": "^8.4.3",
     "@nestjs/platform-express": "^8.4.2",
+    "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
     "cross-env": "^7.0.3",
     "eureka-js-client": "^4.5.0",
+    "express": "^4.17.3",
     "joi": "^17.6.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "0.2",
     "typeorm-naming-strategies": "^4.0.0"
   },
@@ -56,6 +59,7 @@
     "@types/node": "^16.0.0",
     "@types/pg": "^8",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "dotenv": "^16.0.0",
