--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/platform-express": "^8.4.2",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "eureka-js-client": "^4.5.0",
     "express": "^4.17.3",
