feat(member): minio module 추가

--- a/env/.env.template
+++ b/env/.env.template
@@ -13,5 +13,15 @@ POSTGRES_PASSWORD=
 REDIS_HOST=
 REDIS_PORT=
 
+# Minio
+MINIO_HOST=
+MINIO_PORT=
+MINIO_SSL=
+MINIO_ROOT_USER=
+MINIO_ROOT_PASSWORD=
+MINIO_ACCESS_USER=
+MINIO_SECRET_PASSWORD=
+MINIO_CONSISTENCY_CHECK_ON_START
+
 # Grpc
 GRPC_PORT=
