--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eureka-js-client": "^4.5.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
+    "minio": "^7.0.27",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -58,6 +59,7 @@
     "@types/eureka-js-client": "^4",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/minio": "^7",
     "@types/node": "^16.0.0",
     "@types/pg": "^8",
     "@types/supertest": "^2.0.11",
