--- a/package.json
+++ b/package.json
@@ -42,14 +42,17 @@
     "eureka-js-client": "^4.5.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
+    "mime": "^3.0.0",
+    "mime-types": "^2.1.35",
     "minio": "^7.0.27",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "0.2",
-    "typeorm-naming-strategies": "^4.0.0"
+    "typeorm": "^0.3.6",
+    "typeorm-naming-strategies": "^4.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^16.2.1",
@@ -59,11 +62,14 @@
     "@types/eureka-js-client": "^4",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/mime": "^2",
     "@types/minio": "^7",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/pg": "^8",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4",
+    "@types/uuid": "^8",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "dotenv": "^16.0.0",
@@ -81,7 +87,7 @@
     "ts-node": "^10.0.0",
     "ts-proto": "^1.110.2",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
