--- a/package.json
+++ b/package.json
@@ -90,6 +90,10 @@
     "typescript": "^4.6.3"
   },
   "jest": {
+    "moduleNameMapper": {
+      "@/(.*)$": "<rootDir>/$1",
+      "@test/(.*)$": "<rootDir>/../test/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
@@ -109,5 +113,5 @@
   "lint-staged": {
     "*.ts": "eslint --fix"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.1"
 }
