--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/common": "^8.4.2",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.2",
+    "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/microservices": "^8.4.3",
     "@nestjs/platform-express": "^8.4.2",
     "@nestjs/swagger": "^5.2.1",
